<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E79C9"
    tools:context=".Activity.User"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lable_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="#FED36A" />

    <TextView
        android:id="@+id/account"
        android:layout_width="281dp"
        android:layout_height="25dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:text="@string/textview"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fullname"
        android:layout_width="281dp"
        android:layout_height="25dp"
        android:layout_marginStart="45dp"
        android:textColor="@color/white"
        android:text="@string/textview"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/email"
        android:layout_width="281dp"
        android:layout_height="25dp"
        android:layout_marginStart="45dp"
        android:textColor="@color/white"
        android:text="@string/textview"
        android:textSize="15sp"
        android:textStyle="bold" />

    <CheckBox
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/change_fullname"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/fullname" />

    <CheckBox
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/change_email"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/new_email" />

    <CheckBox
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/change_password"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/old_password" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/new_password" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/accept_password" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/update_information"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonnLogout"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/dangxuat"
        android:backgroundTint="#FED36A"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.638" />

</LinearLayout>