<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:background="#0E79C9"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_fmt"
            android:layout_width="258dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:src="@drawable/fmt" />
    </LinearLayout>

    <EditText
        android:id="@+id/username"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_fmt"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:drawableStart="@drawable/baseline_search_24"
        android:drawableEnd="@drawable/baseline_camera_alt_24"
        android:drawablePadding="10dp"
        android:hint="@string/what_do_you_want_to_find_to_day"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textStyle="bold"
        tools:ignore="NotSibling" />

    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="match_parent"
        android:layout_height="265dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="350dp"
            android:layout_height="126dp"
            android:layout_gravity="center"
            android:layout_marginTop="55dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/banner1"
            app:shapeAppearanceOverlay="@style/roundimageview" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="350dp"
            android:layout_height="126dp"
            android:layout_gravity="center"
            android:layout_marginTop="55dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/banner2"
            app:shapeAppearanceOverlay="@style/roundimageview" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="350dp"
            android:layout_height="126dp"
            android:layout_gravity="center"
            android:layout_marginTop="55dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/banner3"
            app:shapeAppearanceOverlay="@style/roundimageview" />
    </ViewFlipper>

    <LinearLayout
        android:id="@+id/home_btn"
        android:layout_width="340dp"
        android:layout_height="57dp"
        android:layout_below="@+id/viewFlipper"
        android:layout_centerHorizontal="true">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/shape_category"
            android:src="@drawable/ic_apps_black_35dp"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/shape_like"
            android:src="@drawable/ic_insert_emoticon_black_24dp" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/shape_deal"
            android:src="@drawable/ic_whatshot_black_24dp" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/shape_e_pay"
            android:src="@drawable/ic_thedt" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/shape_cart"
            android:src="@drawable/baseline_shopping_bag_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_text_btn"
        android:layout_width="340dp"
        android:layout_height="23dp"
        android:layout_below="@+id/home_btn"
        android:layout_centerHorizontal="true"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/catelogy"
            android:textStyle="bold" />

        <TextView
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/like"
            android:textStyle="bold" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="23dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/deal"
            android:textStyle="bold" />

        <TextView
            android:layout_width="52dp"
            android:layout_height="23dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/e_pay"
            android:textStyle="bold" />

        <TextView
            android:layout_width="53dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/cart"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sanphamnoibat"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:background="#0E79C9"
        android:layout_below="@id/home_text_btn"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/samphamnoibat"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/featured_products"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/see_more"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_btn_noibat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0E79C9"
        android:layout_below="@+id/sanphamnoibat"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_product_noibat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:layout_below="@+id/home_btn_noibat"/>

    <LinearLayout
        android:id="@+id/sanphamyeuthich"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:background="#0E79C9"
        android:layout_below="@+id/home_product_noibat"
        android:orientation="vertical">

        <TextView
            android:id="@+id/samphamyeuthich"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="Favorite products"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/see_more"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_product_yeuthich"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:layout_below="@+id/sanphamyeuthich"/>
</RelativeLayout>

